--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-telethon==1.40.0
+aiogram==3.22.0
+aiohttp==3.12.15
+aiohttp_socks==0.10.2
+beautifulsoup4==4.14.2
+python-dotenv==1.2.1
+requests==2.32.5
+selenium==4.36.0
+Telethon==1.40.0
+urllib3==2.5.0
 sty==1.0.4
-aiohttp
-python-dotenv
-aiogram
-aiohttp-socks
-pip install
-beautifulsoup4
-selenium
